# ttv-chat

./: .eslintrc.js  .firebaserc  .gitignore  .prettierrc  README.md  firebase.json  package-lock.json  package.json  rollup.config.js  tsconfig.json  turbo.json
.firebase/: hosting.cHVibGlj.cache
apps/btc/: firebase.json  package.json  rollup.config.js  tsconfig.json  webpack.config.js
client/: chat.css  index.html  main.js  manifest.json  rooms.css  sw.js  window.css
public/: authenticate.html
src/: Account.ts  AnimatedScroll.ts  App.ts  Channel.ts  Color.ts  Focus.ts  Format.ts  IRCChatClient.ts  LinkPreview.ts  MessageParser.ts  Tooltip.ts  Webbrowser.ts  main.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.ai  icon.icns
src-tauri/src/: app.rs  chat.rs  main.rs  messages.rs  services.rs
src/chat/: index.html  package.json  tsconfig.json  vite.config.ts
src/components/: AddChannelDialog.ts  AnimatedScroll.ts  Authenticator.ts  Chat.ts  ChatInput.ts  ChatLine.ts  ChatManager.ts  ChatRooms.ts  ContextMenu.ts  DragHelper.ts  EmotePicker.ts  FluidInput.ts  LinkPreview.ts  Loader.ts  Login.ts  MessageParser.ts  Navigation.ts  PageOverlay.ts  Profile.ts  ProfileIndicator.ts  Timer.ts  Titlebar.ts  Tooltip.ts  TwitchChat.ts  UserList.ts
src/events/: AppEvent.ts  ChannelCreated.ts  ChannelInfoChanged.ts  ChannelMoved.ts  ChannelRemoved.ts  ChannelSelected.ts  ChannelStateChanged.ts  ChatCommand.ts  ChatMessage.ts  Events.ts  Login.ts  Logout.ts
src/pages/: Main.tsx
src/services/: Auth.ts  Badges.ts  CommandList.ts  Emotes.ts  IRC.ts  IRCChatClient.ts  MessageParser.ts  Nightbot.ts  (+5 more)
(+166 files in other folders)
