[package]
authors = ["Tim Havlicek <@timh4v>"]
build = "src/build.rs"
default-run = "better-twitch-chat"
description = "A lightweight Twitch Chat App with all the Twitch Chat features."
edition = "2018"
license = ""
name = "better-twitch-chat"
repository = ""
version = "0.1.0"

[build-dependencies]
tauri-build = {version = "1.0.0-beta.4"}

[dependencies]
serde = "1.0.13"
tauri = {version = "1.0.0-beta.8", features = ["api-all"] }
tokio = {version = "1.0", features = ["rt", "time", "sync", "macros", "rt-multi-thread"] }
twitch-irc = { version = "3.0.1", features = ["with-serde"] }
serde_json = "1.0"
webbrowser = "0.5.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
