[package]
authors = ["Tim Havlicek <@timh4v>"]
build = "src/build.rs"
default-run = "better-twitch-chat"
description = "A lightweight Twitch Chat App with all the Twitch Chat features."
edition = "2018"
license = ""
name = "better-twitch-chat"
repository = ""
version = "0.1.0"

[build-dependencies]
tauri-build = {version = "1.0.0-beta.4"}

[dependencies]
reqwest = { vserion="0.11.6", features = ["json"] }
serde = "1.0.13"
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }
tokio = {version = "1.13", features = ["rt", "time", "sync", "macros", "rt-multi-thread"] }
twitch-irc = { version = "3.0.1", features = ["with-serde"] }
serde_json = "1.0"
webbrowser = "0.5.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
